docs/api/qiskit/0.45/qiskit.circuit.library.GlobalPhaseGate.mdx
---
title: GlobalPhaseGate
description: API reference for qiskit.circuit.library.GlobalPhaseGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.GlobalPhaseGate
---

# GlobalPhaseGate

<Class id="qiskit.circuit.library.GlobalPhaseGate" github="https://github.com/qiskit/qiskit/tree/stable/0.45/qiskit/circuit/library/standard_gates/global_phase.py" signature="qiskit.circuit.library.GlobalPhaseGate(phase, label=None, *, duration=None, unit='dt')">
  Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  The global phase gate ($e^{i\theta}$).

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

  **Mathematical Representation:**

  $$
  \text{GlobalPhaseGate}\ =
      \begin{pmatrix}
          e^{i\theta}
      \end{pmatrix}


  $$

  **Parameters**

  *   **phase** ([*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")  *|*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")) – The value of phase it takes.
  *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – An optional label for the gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.base_class" name="base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioural perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.GlobalPhaseGate.base_class "qiskit.circuit.library.GlobalPhaseGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrised gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrised gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.condition" name="condition">
    The classical condition on the instruction.
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.condition_bits" name="condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.label" name="label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.mutable" name="mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.name" name="name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.GlobalPhaseGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>

  ## Methods

  ### inverse

  <Function id="qiskit.circuit.library.GlobalPhaseGate.inverse" name="inverse" signature="inverse()">
    Return inverted GLobalPhaseGate gate.

    $\text{GlobalPhaseGate}(\lambda)^{\dagger} = \text{GlobalPhaseGate}(-\lambda)$
  </Function>
</Class>

